Labs/06 argocd & apps/clusters/argocd/dev/argocd-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  rules:
  - host: "argocd-dev.fake"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https 
  tls:
    - hosts:
        - argocd-dev.fake
      secretName: argocd-secret
